objects/Client_Plan_Strategy__c.object
<CustomObject>
    <fields>
        <fullName>Bank_Strategy__c</fullName>
        <label>Bank Strategy</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Client_Plan__c</fullName>
        <label>Client Plan</label>
        <referenceTo>Client_Plan__c</referenceTo>
        <relationshipLabel>Client Plan Strategies</relationshipLabel>
        <relationshipName>Client_Plan_Strategies</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Client_Strategy__c</fullName>
        <label>Client Strategy</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <label>Client Plan Strategy</label>
    <nameField>
        <label>Client Plan Strategy Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Client Plan Strategies</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>